# glam

./: .gitmodules  README.md
core/: CMakeLists.txt
core/local/: .gitignore  CMakeLists.txt
core/local/src/: .gitignore
core/src/glam/: colors.h  fxn.cpp  fxn.h  morphemes.cpp  morphemes.h  multipoint.cpp  multipoint.h  types.cpp  types.h  utilities.cpp  utilities.h
core/src/glam/jit/: globals.cpp  globals.h  math_compiler.cpp  math_compiler.h
core/src/glam/mem/: fixed_arena.h
core/src/glam/web/: bindings.cpp  bindings.h  glamcore.cpp
core/test_src/: test_functions.cpp  test_utilities.cpp
ui/: .gitignore  buildMathquill.sh  deploy.sh  package.json  tsconfig.json
ui/public/: index.html
ui/src/: AsciiMathParser.js  BP3Restyler.css  ExpressionParser.ts  GlamContext.tsx  GlamCore.tsx  MathQuill.ts  ProtofunctionContext.tsx  Signals.ts  index.css  index.tsx
ui/src/components/: FunctionEntry.tsx  GraphController.tsx  Icons.tsx  InfoDialog.css  InfoDialog.tsx  LeftSidebar.css  LeftSidebar.tsx  MathQuillField.tsx  MathQuillRestyler.css  MouseTooltip.css  MouseTooltip.tsx  PlotGrid.css  PlotGrid.tsx  PlotObject.css  PlotObject.tsx
ui/src/input/: MathML.ts
